fix overflow issue

--- a/style.css
+++ b/style.css
@@ -23,12 +23,10 @@ input {
 body {
     background-image: url("background.jpg");
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     display: flex;
-    justify-content: center;
+    padding: 1%;
     align-items: center;
-    align-content: center;
-    justify-items: center;
     height: 100%;
     color: #fff;
     flex-direction: column;
@@ -58,6 +56,9 @@ button {
 
 #result {
     display: none;
+    width: 90%;
+    overflow: visible;
+    background-color: #000;
 }
 
 @media only screen and (max-width: 604px) {
